Add email-gated illustrated Velocity OS book download
